samples/_failures_safe/1761509853_6860ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_207b4dd0.c: In function ‘main’:
./samples/SAFE/__tmp_207b4dd0.c:147: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_207b4dd0.c:146:30: note: to match this ‘{’
  146 |     uint8_t sample_data2[] = {0x42, 0x43, 0x44, 0x45, 0x46, 0x47, 0x48, 0x49, 0x4A, 0x4
      |                              ^
./samples/SAFE/__tmp_207b4dd0.c:146:5: error: expected declaration or statement at end of input
  146 |     uint8_t sample_data2[] = {0x42, 0x43, 0x44, 0x45, 0x46, 0x47, 0x48, 0x49, 0x4A, 0x4
      |     ^~~~~~~
